--- a/protein.html
+++ b/protein.html
@@ -2,11 +2,12 @@
 
 <head>
     <title>diet</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
-    <img src="z.jpg" align="right" hieght="200" width="300">
+    
     <h2> ISOLATE Protein</h2>
     <p>A whey protein isolate (often whey isolate) is a dietary supplement and food ingredient created by separating
         components from whey. Whey is milk by-product of the cheese-making process. Whey can be processed to yield whey
@@ -20,7 +21,6 @@
         are used to fuel working muscles and stimulate protein synthesis.</p>
     <hr />
 
-    <img src="o.jpg" align="right" hieght="200" width="300">
     <h2> CONCENTRATE Protein</h2>
     <p>Whey protein concentrate is the cheapest and most common form of whey protein, a byproduct of cheese production.
         Whey protein concentrate is a common bodybuilding supplement used to increase dietary protein intake, often with
@@ -33,7 +33,7 @@
         protein by weight.</p>
     <hr />
 
-    <img src="y.jpg" align="right" hieght="200" width="300">
+   
     <h2>HYDROLYZED Protein</h2>
     <p>Hydrolyzed protein is a protein that has been at least partially hydrolyzed or broken down into its component
         amino acids. While many means of achieving this exist, two of the most common methods are prolonged boiling in a
